--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,3 +146,18 @@ section {
     font-size: 50%;
   }
 }
+
+
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px var(--bg) inset !important;
+}
+
+
+/*Change text in autofill textbox*/
+input:-webkit-autofill{
+  -webkit-text-fill-color: #fff !important;
+}
